--- a/src/core/src/AXOpen.Core.Blazor/AxoDialogs/ModalDialog.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoDialogs/ModalDialog.razor
@@ -21,10 +21,10 @@
 @code {
 
     [Parameter]
-    public RenderFragment BodyTemplate { get; set; }
+    public RenderFragment? BodyTemplate { get; set; }
 
     [Parameter]
-    public RenderFragment HeaderTemplate { get; set; }
+    public RenderFragment? HeaderTemplate { get; set; }
 
     private string _modalDisplay = "none;";
     private string _modalClass = string.Empty;
