--- a/src/templates.simple/axosimple.app/Shared/MainLayout.razor
+++ b/src/templates.simple/axosimple.app/Shared/MainLayout.razor
@@ -13,8 +13,7 @@
     </main>
     <NavMenu />
 
-   <AxoAlertToast></AxoAlertToast>
+   <AxoAlertToast/>
 
-    <AxoAlertDialogLocator ObservedObjects="new[] {Entry.Plc.Context.PneumaticManipulator}" UseScopedAlerts=false/>
 
 </div>
