--- a/src/templates.simple/axosimple.app/Pages/UI/ManipulatorExample2.razor
+++ b/src/templates.simple/axosimple.app/Pages/UI/ManipulatorExample2.razor
@@ -1,5 +1,6 @@
 ﻿@page "/ui/ManipulatorExample2"
 @using AXOpen.Core.Blazor.AxoDialogs;
+@using AXOpen.Core.Blazor.Dialogs
 @using AXSharp.Abstractions.Dialogs.AlertDialog;
 @using axosimple.hmi.Components;
 @using AXOpen.Data;
@@ -20,14 +21,13 @@
 
 
 
-<AxoDialogLocator DialogId="custation002" ObservedObjects="new[] {Entry.Plc.Context.PneumaticManipulator2}"></AxoDialogLocator>
+@*<AxoAlertDialogLocator ObservedObjects="new[] {Entry.Plc.Context.PneumaticManipulator2}" IsScoped="false"></AxoAlertDialogLocator>*@
 
-
+<AxoDialogLocator DialogId="custation02" ObservedObjects="new[] {Entry.Plc.Context.PneumaticManipulator2}"></AxoDialogLocator>
+<AxoAlertDialogLocator ObservedObjects="new[] {Entry.Plc.Context.PneumaticManipulator2}" />
 
 @code
 {
-  
      private IEnumerable<AxoMessenger> Messengers => Entry.Plc.Context.PneumaticManipulator2.GetChildren().Flatten(p => p.GetChildren()).OfType<AxoMessenger>();
-   
 }
 
