--- a/src/templates.simple/axosimple.app/Shared/NavMenu.razor
+++ b/src/templates.simple/axosimple.app/Shared/NavMenu.razor
@@ -8,9 +8,9 @@
             <MenuItem Name="Home" Link="/" Icon="oi oi-home" />
             <ExpandableMenuItem Name="UI" Icon="oi oi-align-center">
                 <MenuItem Name="Controlled unit example" Link="/ui/ManipulatorExample" Icon="oi oi-cog" />
-                <MenuItem Name="I/O" Link="/ui/Io" Icon="oi oi-cog" />
+                <MenuItem Name="I/O" Link="/ui/Io" Icon="oi oi-arrow-circle-bottom" />
                 <MenuItem Name="Process data settings" Link="ui/ProcessData" Icon="oi oi-cog"></MenuItem>
-                <MenuItem Name="User administration" Link="/Security/UserAdministration"></MenuItem>
+                <MenuItem Name="User administration" Link="/Security/UserAdministration" Icon="oi oi-person"></MenuItem>
             </ExpandableMenuItem>
         </nav>
     </div>
