--- a/src/templates.simple/axosimple.app/Shared/Menu/ExpandableMenuItem.razor
+++ b/src/templates.simple/axosimple.app/Shared/Menu/ExpandableMenuItem.razor
@@ -7,7 +7,7 @@
                 {
                     <span class="oi @Icon" aria-hidden="true"></span>
                 }
-                <strong>@Name</strong>
+                <strong>@Localizer[@Name]</strong>
                 <span class="ms-auto oi oi-chevron-top @(_isCollapsed ? "open" : "")" aria-hidden="true"></span>
             </NavLink>
         }
@@ -18,7 +18,7 @@
                 {
                     <span class="oi @Icon" aria-hidden="true"></span>
                 }
-                <strong>@Name</strong>
+                <strong>@Localizer[@Name]</strong>
                 <span class="ms-auto oi oi-chevron-top @(_isCollapsed ? "open" : "")" aria-hidden="true"></span>
             </NavLink>
         }
