--- a/src/templates.simple/axosimple.app/_Imports.razor
+++ b/src/templates.simple/axosimple.app/_Imports.razor
@@ -1,12 +1,19 @@
-﻿@using System.Net.Http
+﻿@using System.Globalization
+@using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.Extensions.Localization
 @using Microsoft.JSInterop
+@using axosimple.Resources
 @using axosimple.hmi
+@using axosimple.hmi.Resources
 @using axosimple.hmi.Shared
 @using axosimple.hmi.Shared.Menu
 @using AXSharp.Presentation.Blazor.Controls.RenderableContent
+
+@inject IStringLocalizer<BlazorResources> Localizer
+@inject IStringLocalizer<PlcStringResources> PlcLocalizer
