--- a/src/security/src/AXOpen.Security.Blazor/Views/AccountManagementView.razor
+++ b/src/security/src/AXOpen.Security.Blazor/Views/AccountManagementView.razor
@@ -16,16 +16,16 @@
 <AuthorizeView>
     <Authorized>
         <div class="card">
-            <h4 class="card-header">Account Manage</h4>
+            <h4 class="card-header">@Localizer["Account Manage"]</h4>
             <div class="card-body">
                 <EditForm Model="@_model" OnValidSubmit="OnValidUpdate" Context="accountManagementContext">
                     <DataAnnotationsValidator />
                     <div class="form-group">
-                        <label>Username</label>
+                        <label>@Localizer["Username"]</label>
                         <InputText @bind-Value="_model.Username" type="text" class="form-control" disabled />
                     </div>
                     <div class="form-group">
-                        <label>Group</label>
+                        <label>@Localizer["Group"]</label>
                         <InputText @bind-Value="_model.Group" type="text" class="form-control" disabled />
                     </div>
                     <div class="form-group">
@@ -36,23 +36,23 @@
                     @if (_model.CanUserChangePassword)
                     {
                         <div class="form-group">
-                            <label>Old Password</label>
+                            <label>@Localizer["Old password"]</label>
                             <InputText @bind-Value="_model.OldPassword" type="password" class="form-control" />
                             <ValidationMessage For="@(() => _model.OldPassword)" />
                         </div>
                         <div class="form-group">
-                            <label>Password</label>
+                            <label>@Localizer["New password"]</label>
                             <InputText @bind-Value="_model.Password" type="password" class="form-control" />
                             <ValidationMessage For="@(() => _model.Password)" />
                         </div>
                         <div class="form-group">
-                            <label>Confirm password</label>
+                            <label>@Localizer["Confirm new password"]</label>
                             <InputText @bind-Value="_model.ConfirmPassword" type="password" class="form-control" />
                             <ValidationMessage For="@(() => _model.ConfirmPassword)" />
                         </div>
                     }
                     <div class="d-flex justify-content-between">
-                        <button type="submit" class="btn btn-primary m-2">Update</button>
+                        <button type="submit" class="btn btn-primary m-2">@Localizer["Update"]</button>
                         @*@if (_repositoryService.ExternalAuthorization != null)
                         {
                             <button type="button" class="btn btn-primary m-2" data-bs-toggle="modal" data-bs-target="#changeAuthorizationTokenModal">Change authorization token</button>
@@ -78,7 +78,7 @@
         </div>*@
     </Authorized>
     <NotAuthorized>
-        <p>Sorry, you are not logged in. Please log in.</p>
+        <p>@Localizer["Sorry, you are not logged in. Please log in."]</p>
     </NotAuthorized>
 </AuthorizeView>
 
@@ -98,12 +98,12 @@
         if (result.Succeeded)
         {
             _signInManager.RefreshSignInAsync(_user);
-            _alertDialogService.AddAlertDialog("Success", "Updated!", "User succesfully updated.", 10);
+            _alertDialogService.AddAlertDialog("Success", Localizer["Updated!"], Localizer["User succesfully updated."], 10);
             //TcoAppDomain.Current.Logger.Information($"User '{_user.UserName}' has changed.{{payload}}", new { UserName = _user.UserName, Email = _user.Email, CanChangePassword = _user.CanUserChangePassword, Group = string.Join(",", _user.Roles) });
         }
         else
         {
-            _alertDialogService.AddAlertDialog("Success", "Not updated!", "User was not updated.", 10);
+            _alertDialogService.AddAlertDialog("Success", Localizer["Not updated!"], Localizer["User was not updated."], 10);
         }
     }
 
