--- a/src/security/src/AXOpen.Security.Blazor/Views/UserManagementView.razor
+++ b/src/security/src/AXOpen.Security.Blazor/Views/UserManagementView.razor
@@ -6,16 +6,16 @@
 
 <div class="card" style="min-height: 20vh; max-height: 40vh">
     <div class="card-header">
-        <h4>List of users:</h4>
+        <h4>@Localizer["List of users:"]</h4>
     </div>
     <div class="card-body overflow-auto">
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th scope="col">Username</th>
-                    <th scope="col">Can change password</th>
-                    <th scope="col">Created</th>
-                    <th scope="col">Modified</th>
+                    <th scope="col">@Localizer["Username"]</th>
+                    <th scope="col">@Localizer["Can change password"]</th>
+                    <th scope="col">@Localizer["Created"]</th>
+                    <th scope="col">@Localizer["Modified"]</th>
                 </tr>
             </thead>
             <tbody>
@@ -32,13 +32,13 @@
         </table>
     </div>
 </div>
-<a class="btn btn-primary mt-4" role="button" href="Identity/Account/Register">Create new user</a>
+<a class="btn btn-primary mt-4" role="button" href="Identity/Account/Register">@Localizer["Create new user"]</a>
 @if (SelectedUser != null)
 {
     <div class="card mt-4">
         <div class="card-header">
             <div class="d-flex">
-                <h4 class="me-auto">Selected user:</h4>
+                <h4 class="me-auto">@Localizer["Selected user:"]</h4>
                 <button type="button" class="btn-close align-self-center" @onclick="@(() => CloseUserDetail())"></button>
             </div>
         </div>
@@ -46,19 +46,20 @@
             <EditForm Model="@_model" OnValidSubmit="OnValidUpdate">
                 <DataAnnotationsValidator />
                 <div class="form-group">
-                    <label>Username</label>
+                    <label>@Localizer["Username"]</label>
                     <InputText @bind-Value="_model.Username" type="text" class="form-control" disabled />
                     <ValidationMessage For="@(() => _model.Username)" />
                 </div>
 
                 <div class="form-group">
-                    <label>Password</label>
+                    <label>@Localizer["Password"]</label>
                     <InputText @bind-Value="_model.Password" type="password" class="form-control" />
                     <ValidationMessage For="@(() => _model.Password)" />
                 </div>
 
                 <div class="form-group">
-                    <label>Confirm password</label>
+                    <label>
+                        @Localizer["Confirm password"]</label>
                     <InputText @bind-Value="_model.ConfirmPassword" type="password" class="form-control" />
                     <ValidationMessage For="@(() => _model.ConfirmPassword)" />
                 </div>
@@ -71,14 +72,14 @@
 
                 <div class="form-check form-switch">
                     <InputCheckbox @bind-Value="_model.CanUserChangePassword" class="form-check-input" type="checkbox" id="checkBoxCanUserChangePassword" />
-                    <label class="form-check-label" for="checkBoxCanUserChangePassword">Can user change password</label>
+                    <label class="form-check-label" for="checkBoxCanUserChangePassword">@Localizer["Can change password"]</label>
                     <ValidationMessage For="@(() => _model.CanUserChangePassword)" />
                 </div>
 
                 <div class="form-group">
-                    <label>Group</label>
+                    <label>@Localizer["Group"]</label>
                     <select class="form-select" aria-label="Default select example" @bind="@_model.Group">
-                        <option selected disabled>Choose group</option>
+                        <option selected disabled>@Localizer["Choose group"]</option>
                         @foreach (var group in _repositoryService.RoleGroupManager.GetAllGroup())
                         {
                             <option value="@group.Name">@group.Name</option>
@@ -87,8 +88,8 @@
                     <ValidationMessage For="@(() => _model.Group)" />
                 </div>
                 <div>
-                    <button type="submit" class="btn btn-primary m-2">Update</button>
-                    <button type="button" class="btn btn-danger m-2" data-bs-toggle="modal" data-bs-target="#deleteModal">Delete</button>
+                    <button type="submit" class="btn btn-primary m-2">@Localizer["Update"]</button>
+                    <button type="button" class="btn btn-danger m-2" data-bs-toggle="modal" data-bs-target="#deleteModal">@Localizer["Delete"]</button>
                 </div>
             </EditForm>
         </div>
@@ -101,15 +102,15 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="deleteModalLabel">Delete user</h5>
+                    <h5 class="modal-title" id="deleteModalLabel">@Localizer["Delete user"]</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <h6>Do you want to delete user @SelectedUser.UserName?</h6>
+                    <h6>@Localizer["Do you want to delete user"] @SelectedUser.UserName?</h6>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary m-2" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-danger m-2" data-bs-dismiss="modal" @onclick="@(() => DeleteUser(SelectedUser))">Delete</button>
+                    <button type="button" class="btn btn-secondary m-2" data-bs-dismiss="modal">@Localizer["Close"]</button>
+                    <button type="button" class="btn btn-danger m-2" data-bs-dismiss="modal" @onclick="@(() => DeleteUser(SelectedUser))">@Localizer["Delete"]</button>
                 </div>
             </div>
         </div>
