--- a/src/security/src/AXOpen.Security.Blazor/_Imports.razor
+++ b/src/security/src/AXOpen.Security.Blazor/_Imports.razor
@@ -3,7 +3,11 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.Extensions.Localization;
 @using Microsoft.JSInterop
 @using Microsoft.AspNetCore.Identity
 @using System.Linq
 @using System.Net.Http
+@using AXOpen.Security.Blazor.Resources
+
+@inject IStringLocalizer<BlazorResources> Localizer
