--- a/src/templates.simple/axosimple.app/Components/UnitsService.razor
+++ b/src/templates.simple/axosimple.app/Components/UnitsService.razor
@@ -25,6 +25,6 @@
     protected override void OnInitialized()
     {
         base.OnInitialized();
-        this.UpdateValuesOnChange(ServiceTask);
+        this.UpdateValuesOnChange(ServiceTask?.Status);
     }
 }
