--- a/src/core/src/AXOpen.Core.Blazor/AxoDialogs/AxoDialogLocator.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoDialogs/AxoDialogLocator.razor
@@ -37,6 +37,11 @@
     /// </summary>
     [Parameter]
     public int DialogOpenDelay { get; set; } = 100;
+    /// <summary>
+    /// Using SSL certificate for SignalR connection (default value is true).
+    /// </summary>
+    [Parameter]
+    public bool BypassSSLCertificate { get; set; } = true;
 
 
     private AxoDialogProxyService _axoDialogProxyService { get; set; }
@@ -52,7 +57,7 @@
             DialogId = _navigationManager.Uri;
         }
         //initialize signalR
-        _dialogContainer.InitializeSignalR(_navigationManager.BaseUri);
+        _dialogContainer.InitializeSignalR(_navigationManager.BaseUri, BypassSSLCertificate);
         await _dialogContainer.DialogClient.StartAsync();
 
         //try to acquire existing dialog service instance
