wip add dispose for dialogues

--- a/src/core/src/AXOpen.Core.Blazor/AxoAlertDialog/AxoAlertDialogLocator.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoAlertDialog/AxoAlertDialogLocator.razor
@@ -84,5 +84,6 @@
     public void Dispose()
     {
         _axoDialogProxyService.AlertDialogInvoked -= OnDialogInvoked;
+        _axoDialogProxyService.Dispose();
     }
 }
