--- a/src/core/src/AXOpen.Core.Blazor/AxoDialogs/AxoDialogLocator.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoDialogs/AxoDialogLocator.razor
@@ -85,6 +85,7 @@
     {
         
         _axoDialogProxyService.DialogInvoked -= OnDialogInvoked;
+        _axoDialogProxyService.Dispose();
     }
 
 }
