--- a/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/DataExchangeView.razor
+++ b/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/DataExchangeView.razor
@@ -22,8 +22,8 @@ else
                 <button type="button" class="btn btn-primary ms-2" data-bs-toggle="modal" data-bs-target="#createModal-@ViewGuid" @onclick='() => Create = "LoadFromPLC"'>Load from PLC</button>
                 @if (CanExport)
                 {
-                    <button type="button" class="btn btn-primary ms-2" data-bs-toggle="modal" data-bs-target="#exportModal-@ViewGuid" @onclick='async () => { Vm.IsFileExported = false; await Vm.ExportDataAsync("wwwroot/Temp/" + ViewGuid + "/exportData.zip"); LoadCustomExportDataAsync(); }'>Export</button>
-                    <button type="button" class="btn btn-primary ms-2" data-bs-toggle="modal" data-bs-target="#importModal-@ViewGuid" @onclick="() => isFileImported = false">Import</button>
+                    <button type="button" class="btn btn-primary ms-2" data-bs-toggle="modal" data-bs-target="#exportModal-@ViewGuid" @onclick='async () => { Vm.IsFileExported = false; await Vm.ExportDataAsync("wwwroot/Temp/" + ViewGuid + "/exportData.zip"); await LoadCustomExportDataAsync(); }'>Export</button>
+                    <button type="button" class="btn btn-primary ms-2" data-bs-toggle="modal" data-bs-target="#importModal-@ViewGuid" @onclick="async () => { isFileImported = false; await LoadCustomExportDataAsync(); }">Import</button>
                 }
             }
             <div class="btn-group ms-auto" role="group">
@@ -386,27 +386,35 @@ else
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="exampleModalLabel">Import data</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" @onclick="async () => await SaveCustomExportDataAsync()"></button>
                 </div>
                 <div class="modal-body">
                     <div class="mb-3">
                         <label for="formFile" class="form-label">File input</label>
                         <InputFile @key=@(_inputFileId) class="form-control col-10" id="formFile" accept=".zip" OnChange="@LoadFile" />
                     </div>
-                    <div class="input-group d-inline-flex w-25 align-middle">
-                        <span class="input-group-text">Separator</span>
-                        <input type="text" class="form-control" placeholder="Separator" aria-label="Separator" @bind="Vm.ExportSet.Separator">
-                    </div>
                 </div>
                 <div class="modal-footer">
+                    <div class="col-12">
+                        <div class="btn-group mt-2" role="group" aria-label="File type">
+                            @foreach (var item in Vm.DataExchange.Exporters)
+                            {
+                                <button type="button" class="btn @(Vm.ExportSet.ExportFileType == item.Key ? "btn-primary" : "btn-outline-primary")" @onclick="() => Vm.ExportSet.ExportFileType = item.Key">@item.Key</button>
+                            }
+                        </div>
+                        <div class="input-group mt-2 d-inline-flex w-25 align-middle">
+                            <span class="input-group-text">Separator</span>
+                            <input type="text" class="form-control" placeholder="Separator" aria-label="Separator" @bind="Vm.ExportSet.Separator">
+                        </div>
+                    </div>
                     @if (!isFileImported && isFileImporting)
                     {
                         <div class="spinner-border" role="status">
                             <span class="visually-hidden">Loading...</span>
                         </div>
                     }
-                    <button type="button" class="btn btn-primary @(!isFileImported || isFileImporting ? "disabled" : "")" data-bs-dismiss="modal" @onclick='async () => { await Vm.ImportDataAsync("wwwroot/Temp/" + ViewGuid + "/importData.zip"); isFileImported = false; _inputFileId = Guid.NewGuid().ToString(); }'>Import</button>
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary @(!isFileImported || isFileImporting ? "disabled" : "")" data-bs-dismiss="modal" @onclick='async () => { await Vm.ImportDataAsync("wwwroot/Temp/" + ViewGuid + "/importData.zip"); isFileImported = false; _inputFileId = Guid.NewGuid().ToString(); SaveCustomExportDataAsync(); }'>Import</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" @onclick="async () => await SaveCustomExportDataAsync()">Close</button>
                 </div>
             </div>
         </div>
@@ -487,8 +495,10 @@ else
                     </div>
                     <div class="col-12">
                         <div class="btn-group mt-2" role="group" aria-label="File type">
-                            <button type="button" class="btn @(Vm.ExportSet.ExportFileType == eFileType.csv ? "btn-primary" : "btn-outline-primary")" @onclick="() => Vm.ExportSet.ExportFileType = eFileType.csv">csv</button>
-                            <button type="button" class="btn @(Vm.ExportSet.ExportFileType == eFileType.txt ? "btn-primary" : "btn-outline-primary")" @onclick="() => Vm.ExportSet.ExportFileType = eFileType.txt">txt</button>
+                            @foreach(var item in Vm.DataExchange.Exporters)
+                            {
+                                <button type="button" class="btn @(Vm.ExportSet.ExportFileType == item.Key ? "btn-primary" : "btn-outline-primary")" @onclick="() => Vm.ExportSet.ExportFileType = item.Key">@item.Key</button>
+                            }
                         </div>
                         <div class="input-group mt-2 d-inline-flex w-25 align-middle">
                             <span class="input-group-text">Separator</span>
