--- a/src/core/src/AXOpen.Core.Blazor/AxoDialogs/AxoDialogLocator.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoDialogs/AxoDialogLocator.razor
@@ -37,11 +37,6 @@
     /// </summary>
     [Parameter]
     public int DialogOpenDelay { get; set; } = 100;
-    /// <summary>
-    /// Using SSL certificate for SignalR connection (default value is false).
-    /// </summary>
-    [Parameter]
-    public bool BypassSSLCertificate { get; set; } = false;
 
 
     private AxoDialogProxyService _axoDialogProxyService { get; set; }
@@ -57,7 +52,7 @@
             DialogId = _navigationManager.Uri;
         }
         //initialize signalR
-        _dialogContainer.InitializeSignalR(_navigationManager.BaseUri, BypassSSLCertificate);
+        _dialogContainer.InitializeSignalR(_navigationManager.BaseUri);
         await _dialogContainer.DialogClient.StartAsync();
 
         //try to acquire existing dialog service instance
