updates to AX# 0.4.0-alpha.116 - 116 aligned to the changes here - limits online reading on shadows of AxoDataEchange

--- a/src/core/src/AXOpen.Core.Blazor/AxoAlertDialog/AxoAlertDialogLocator.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoAlertDialog/AxoAlertDialogLocator.razor
@@ -57,7 +57,7 @@
         if (firstRender)
         {
             if (ObservedObjects != null)
-                _axoDialogProxyService.SetObservedObjects(ObservedObjects);
+                _axoDialogProxyService.StartObserveObjects(ObservedObjects);
 
             _axoDialogProxyService.AlertDialogInvoked += OnDialogInvoked;
 
