--- a/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/Command/AxoDataExchangeBaseCommandView.razor
+++ b/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/Command/AxoDataExchangeBaseCommandView.razor
@@ -1,6 +1,7 @@
 ﻿@namespace AXOpen.Data
 
 
+@using AXSharp.Connector
 @inherits RenderableComplexComponentBase<AxoDataExchangeBase>;
 @inject IAlertDialogService _alertDialogService
 
@@ -10,5 +11,9 @@
 {
     private DataExchangeViewModel _vm => new DataExchangeViewModel { Model = this.Component, AlertDialogService = _alertDialogService };
 
+    public override void AddToPolling(ITwinElement element, int pollingInterval = 250)
+    {
+        
+    }
 }
 
