--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/AxoCognexVision/AxoCognexVisionDatamanExample.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/AxoCognexVision/AxoCognexVisionDatamanExample.razor
@@ -19,23 +19,14 @@
             </div>
         </div>
         
-        <div class="row">
+@*        <div class="row">
             <div class="col">
-                ActionDescription:
-                <p class="demo-text cw-320 mt-2">
-                    Text: <b>@TextValue</b>
-                </p>
-
-                @code {
-                    string TextValue = @Entry.Plc.AxoCognexVisionDatamanExampleContext.MyDataman.Status.ActionDescription.ToString();
-                }
-                @Entry.Plc.AxoCognexVisionDatamanExampleContext.MyDataman.Status.ActionDescription
+                ActionDescription: <b>@Entry.Plc.AxoCognexVisionDatamanExampleContext.MyDataman.Status.ActionDescription.ToString()</b>
             </div>
             <div class="col">
-                ErrorDescription:
-                @Entry.Plc.AxoCognexVisionDatamanExampleContext.MyDataman.Status.ErrorDescription
+                ErrorDescription: <b>@Entry.Plc.AxoCognexVisionDatamanExampleContext.MyDataman.Status.ErrorDescription.ToString()</b>
             </div>
-        </div>
+        </div>*@
 
 
         <div class="col">
