--- a/src/integrations/src/AXOpen.Integrations.Blazor/Shared/NavMenu.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Shared/NavMenu.razor
@@ -90,6 +90,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="AxoTextListExample">
+                <span class="oi oi-plus" aria-hidden="true"></span> AxoTextListExample
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="AxoCognexVisionDatamanExample">
                 <span class="oi oi-plus" aria-hidden="true"></span> AxoCognexVisionDatamanExample
             </NavLink>
