cognex vision-some styling modification

--- a/src/core/src/AXOpen.Core.Blazor/AxoTextList/AxoTextListView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoTextList/AxoTextListView.razor
@@ -4,8 +4,8 @@
 @inherits RenderableComplexComponentBase<AxoTextList>
 @implements IDisposable;
 
-<div class="d-flex align-end me-2 mt-2 mb-2">
-    <div class="@_btnClass">
+<div class="@_cardClass">
+    <div class="d-flex align-end ms-2 me-1 mt-1 mb-1">
         <span>@_text</span>
     </div>
 </div>
