AxoTextList warning level and error level defined by attributes inside the PLC code

--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/AxoTextList/AxoTextListExample.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/AxoTextList/AxoTextListExample.razor
@@ -18,7 +18,13 @@
             </div>
         </div>
         <div class="col">
-            <RenderableContentControl Context="@Entry.Plc.AxoTextListExampleContext._myTextList" Presentation="Command" />
+            <RenderableContentControl Context="@Entry.Plc.AxoTextListExampleContext._myTextList1" Presentation="Command" />
+        </div>
+        <div class="col">
+            <RenderableContentControl Context="@Entry.Plc.AxoTextListExampleContext._myTextList2" Presentation="Command" />
+        </div>
+        <div class="col">
+            <RenderableContentControl Context="@Entry.Plc.AxoTextListExampleContext._myTextList3" Presentation="Command" />
         </div>
     </div>
 </div>
